--- a/listkd.ui
+++ b/listkd.ui
@@ -74,7 +74,7 @@
       <widget class="QLabel" name="label">
        <property name="font">
         <font>
-         <pointsize>12</pointsize>
+         <pointsize>11</pointsize>
         </font>
        </property>
        <property name="text">
@@ -121,6 +121,9 @@
      </item>
      <item>
       <widget class="QPushButton" name="DetailKTR">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="minimumSize">
         <size>
          <width>141</width>
