--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1141</width>
-    <height>752</height>
+    <height>661</height>
    </rect>
   </property>
   <property name="font">
@@ -81,7 +81,7 @@
       <x>780</x>
       <y>128</y>
       <width>351</width>
-      <height>411</height>
+      <height>321</height>
      </rect>
     </property>
     <property name="font">
@@ -101,7 +101,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>780</x>
-      <y>540</y>
+      <y>450</y>
       <width>351</width>
       <height>181</height>
      </rect>
@@ -866,7 +866,7 @@ p, li { white-space: pre-wrap; }
       <x>230</x>
       <y>170</y>
       <width>501</width>
-      <height>551</height>
+      <height>461</height>
      </rect>
     </property>
     <property name="readOnly">
@@ -881,6 +881,12 @@ p, li { white-space: pre-wrap; }
       <width>211</width>
       <height>332</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>332</height>
+     </size>
     </property>
     <property name="font">
      <font>
@@ -996,6 +1002,7 @@ p, li { white-space: pre-wrap; }
     <property name="title">
      <string>Файл</string>
     </property>
+    <addaction name="actionSave"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
@@ -1011,6 +1018,11 @@ p, li { white-space: pre-wrap; }
    <addaction name="menu_2"/>
    <addaction name="menu_3"/>
   </widget>
+  <action name="actionSave">
+   <property name="text">
+    <string>Сформировать в документ .docx</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
