--- a/knowledgebase.ui
+++ b/knowledgebase.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>670</width>
-    <height>385</height>
+    <height>418</height>
    </rect>
   </property>
   <property name="minimumSize">
@@ -405,7 +405,7 @@
     </spacer>
    </item>
    <item row="4" column="0" colspan="3">
-    <widget class="QGroupBox" name="groupBox_3">
+    <widget class="QGroupBox" name="gb_text">
      <property name="title">
       <string>1 / 5</string>
      </property>
