--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -811,7 +811,7 @@ p, li { white-space: pre-wrap; }
             </widget>
            </item>
            <item row="1" column="0">
-            <widget class="QLabel" name="label_2">
+            <widget class="QLabel" name="lb_ktr">
              <property name="maximumSize">
               <size>
                <width>59</width>
@@ -829,7 +829,7 @@ p, li { white-space: pre-wrap; }
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QLabel" name="label_3">
+            <widget class="QLabel" name="lb_ksc">
              <property name="maximumSize">
               <size>
                <width>59</width>
@@ -847,7 +847,7 @@ p, li { white-space: pre-wrap; }
             </widget>
            </item>
            <item row="1" column="2">
-            <widget class="QLabel" name="label_4">
+            <widget class="QLabel" name="lb_kgdp">
              <property name="maximumSize">
               <size>
                <width>59</width>
@@ -865,7 +865,7 @@ p, li { white-space: pre-wrap; }
             </widget>
            </item>
            <item row="1" column="3">
-            <widget class="QLabel" name="label_5">
+            <widget class="QLabel" name="lb_kpsp">
              <property name="maximumSize">
               <size>
                <width>59</width>
@@ -883,7 +883,7 @@ p, li { white-space: pre-wrap; }
             </widget>
            </item>
            <item row="1" column="4">
-            <widget class="QLabel" name="label_6">
+            <widget class="QLabel" name="lb_kef">
              <property name="maximumSize">
               <size>
                <width>59</width>
