--- a/knowledgebase.ui
+++ b/knowledgebase.ui
@@ -312,7 +312,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Показать список</string>
+      <string>Показать доп. список</string>
      </property>
     </widget>
    </item>
